<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/my_toolbar"

        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black_800"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:menu="@menu/delete_note"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/ikeeper_item"
        android:id="@+id/recycler"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:layout_gravity="bottom|end"
        android:id="@+id/add"
        android:layout_margin="32dp"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>