...
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/proceed_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_36"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:paddingEnd="@dimen/max_padding"
        android:paddingLeft="@dimen/max_padding"
...
